--- a/style.css
+++ b/style.css
@@ -1,43 +1,73 @@
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+svg #line {
+  fill: none;
+  stroke: #e00000;
+  stroke-width: 1.5;
+  stroke-linecap: butt;
+  stroke-linejoin: round;
+  stroke-miterlimit: 4;
+  stroke-opacity: 1;
+  stroke-dasharray: 1;
+  stroke-dashoffset: 1;
+  animation: dash 3s linear infinite;
+}
+
+svg #point {
+  fill: none;
+  stroke: #f00000;
+  stroke-width: 5;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-miterlimit: .1;
+  stroke-opacity: 1;
+  stroke-dasharray: .0001, .9999;
+  stroke-dashoffset: 1;
+  animation: dash 3s linear infinite;
+}
+
+#name-container {
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  transform: translate(-50%, -50%) scale(0);
+  font-family: 'Great Vibes', cursive;
+  font-size: 70px;
+  font-weight: bold;
+  color: #f00000;
+  animation: slide 3s linear infinite;
+}
+
+@keyframes slide {
+  0% {
+      transform: translate(-50%, -50%) scale(0);
+      opacity: 0;
   }
-  svg #line {
-    fill: none;
-    stroke: #e00000;
-    stroke-width: 1.5;
-    stroke-linecap: butt;
-    stroke-linejoin: round;
-    stroke-miterlimit: 4;
-  
-    stroke-opacity: 1;
-    stroke-dasharray: 1;
+  50% {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1.1);
+  }
+  100% {
+      transform: translate(-50%, -50%) scale(1);
+      opacity: 0;
+  }
+}
+
+@keyframes dash {
+  0% {
     stroke-dashoffset: 1;
-    animation: dash 3s linear infinite;
   }
-  svg #point {
-    fill: none;
-    stroke: #f00000;
-    stroke-width: 5;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke-miterlimit: .1;
-    stroke-opacity: 1;
-    stroke-dasharray: .0001, .9999;
-    stroke-dashoffset: 1;
-    animation: dash 3s linear infinite;
+
+  80% {
+    stroke-dashoffset: 0;
   }
-  
-  @keyframes dash {
-    0% {
-      stroke-dashoffset: 1;
-    }
-    80% {
-      stroke-dashoffset: 0;
-    }
-    100% {
-      stroke-dashoffset: 0;
-    }
+
+  100% {
+    stroke-dashoffset: 0;
   }
+}
